[package]
name = "cc_mt"
version = "0.3.2"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Jeff Muizelaar <jrmuizel@gmail.com>"]

description = "A reference counted type with cycle collection."

license = "MIT/Apache-2.0"

repository="https://github.com/fitzgen/bacon-rajan-cc"
documentation="https://docs.rs/crate/bacon_rajan_cc/"

readme="README.md"

keywords=["cc", "gc", "mark", "sweep", "garbage"]

[lib]
name = "cc_mt"

[dependencies]
parking_lot = "0.11.1"
once_cell = "1.7.2"
